# demo

./: .gitignore  README.md  llm_client.py  main.py  prompt_templates.py  pyproject.toml  test_llm.py
.trae/specs/ai-code-review-enhancement/: checklist.md  spec.md  tasks.md
github_pr_diff/: api.py  cache.py  cli.py  file_utils.py  github_client.py  llm_analyzer.py
static/: index.html
