[project]
name = "github-pr-diff"
version = "0.1.0"
description = "GitHub PR Diff Tool - CLI and FastAPI service"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=10.0.0",
]

[tool.poetry.scripts]
pr-diff = "github_pr_diff.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
